I added an appendix (referred to in the \paragraph “What is CT”) to give a hint to the reader why we can claim that CT is “a skill for everyone.”
I added to the sentence describing what we did in Teacher Training Session “3. Algorithms”.

I added my name to the author list.

I fixed a typo or two.

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -12,7 +12,7 @@
 
 \title{PACT: \\ {\large Programming ${\land}$ Algorithms $\Rightarrow$ Computational Thinking}}
 
-\author{Aidan Mooney, Joseph Duffin, Rosemary Monahan and James F. Power}
+\author{Aidan Mooney, Joseph Duffin, Rosemary Monahan, \\ Thomas J. Naughton, and James F. Power}
 
 \begin{figure}\centering
 \includegraphics[height=.2\textheight]{nuim_large.jpg}
@@ -47,8 +47,7 @@ Google\footnote{\url{http://www.google.com/edu/computational-thinking/}} and the
 Crucial elements of this perspective are that:
 \begin{compactitem}
 \item Computational thinking is a way that humans, not computers, think.
-\item Computational thinking is a fundamental skill for
-everyone, not just for computer scientists.
+\item Computational thinking is a fundamental skill for everyone, not just for computer scientists (see Appendix~\ref{apx:CTOutside} for examples).
 \end{compactitem}
 
 
@@ -62,7 +61,7 @@ We can identify three key levels of understanding in Computer Science:
 \item \textbf{Programming} is a threshold concept in Computer Science, as it introduces some of the basic challenges of the discipline.  
 \item \textbf{Algorithms} involves studying solutions in computational terms: which solutions are better, in what circumstances, and why?
 \item \textbf{Computability} is the study of \textit{problems} in 
-computational terms: what can be computed, and why?
+computational terms: what can and cannot be computed, and why?
 \end{itemize}
 
 The goal of the PACT programme is to guide students through the key topics in programming and algorithms towards the ultimate goal of studying the process of computation itself.
@@ -210,7 +209,7 @@ The content was based on the \textit{Python} programming language\footnote{\url{
 Components 1 and 2 of the training sessions covered the basics of installation of \textit{Python} and also looked at how to create and run programs written in \textit{Python}. They looked at the main features of the language and gave sample programs for the teachers to use. 
 An exercise book was created for all lessons within these sections which the teacher could use in class to get their students working in \textit{Python}. In total 19 PowerPoint presentations were prepared for these sections which the teacher could break up into whatever format they felt worked for them. 
 
-Component 3 focused on algorithms and the process of analysing problems to devise abstract computational solutions.  It showed how to write a step by step procedure to solve some classic problems in Computer Science. Component 4 looked at generating simple 2-D graphics using the \textit{Pygame} set of modules. This section focused on allowing the participants to create fully featured games in the \textit{Python} language, and can provide a useful focus for project-based programming work.  Component 5 covered topics related to recursion which has been defined as ``the process of repeating items in a self-similar way" and is fundamental to the core theory of Computer Science. \\
+Component 3 focused on algorithms and the process of analysing problems to devise abstract computational solutions.  It showed how to write (using pencil and paper) step-by-step procedures to solve some classic problems in Computer Science, framed as problems from domains such as board games, cryptography, and bioinformatics. Component 4 looked at generating simple 2-D graphics using the \textit{Pygame} set of modules. This section focused on allowing the participants to create fully featured games in the \textit{Python} language, and can provide a useful focus for project-based programming work.  Component 5 covered topics related to recursion which has been defined as ``the process of repeating items in a self-similar way" and is fundamental to the core theory of Computer Science. \\
 
 %\newline
 
@@ -278,7 +277,7 @@ During the Summer of 2014 a student intern will be working with the PACT team to
 \section{Future funding initiative} \label{Sect:FutFunding}
 The Erasmus+ Programme which commenced on the 1st January 2014 offers the opportunity for Strategic Partnerships for organisations involved in school education. As outlined in Section \ref{par:CTSchools}, other Irish and international initiatives in teaching basic programming skills and multimedia design, aim to develop student teamwork and communication skills. While these initiatives are welcome, they are limited in that they do not address the broader principles of Computer Science. Initiatives to introduce Computer Science to schools in Europe and in the USA have concluded that there is a need to reform Computer Science education at post-primary level to promote  both Computer Science and digital literacy. 
 
-The NUIM PACT programme provides the ground work for such a reform in Computer Science. It places NUIM in the ideal position of leading an Erasmus+ Strategic Partnership (under Key Activity 2) which would be funded for 3 years. These partnerships focus on activities designed to improve education provision across the participating countries, promoting cross-sectoral cooperation and addressing policy objectives, challenges and the needs of a specific field such as post-primary and third-level education.  Through such a strategic partnership with schools, universities and industry, we will be empowered to implement joint initiatives on programme curriculum and teaching training, as well as promoting exchange of experience and know-how. In 2014 the allocation of funding in Ireland for such a partnership was \euro 450,000. It is expected that the funding available n 2015 will be increased and the application deadline will be in April 2015.  
+The NUIM PACT programme provides the ground work for such a reform in Computer Science. It places NUIM in the ideal position of leading an Erasmus+ Strategic Partnership (under Key Activity 2) which would be funded for 3 years. These partnerships focus on activities designed to improve education provision across the participating countries, promoting cross-sectoral cooperation and addressing policy objectives, challenges and the needs of a specific field such as post-primary and third-level education.  Through such a strategic partnership with schools, universities and industry, we will be empowered to implement joint initiatives on programme curriculum and teaching training, as well as promoting exchange of experience and know-how. In 2014, the allocation of funding in Ireland for such a partnership was \euro 450,000. It is expected that the funding available in 2015 will be increased and the application deadline will be in April 2015.  
 
 
 
@@ -294,11 +293,29 @@ Rosemary Monahan,
 Tom Naughton and
 James F. Power. 
 
-
-
-
 Our website is: \url{http://www.cs.nuim.ie/pact}.
+
 
 \bibliographystyle{unsrt}%{plain}
 \bibliography{ref}
+
+
+\appendix
+
+\newpage
+
+\section{Appendix: Computational thinking outside of computer science}\label{apx:CTOutside}
+
+\subsection{A broad example: computational thinking for managers}
+
+In the workplace, the job description of each level of management can be shown to require computational thinking.
+Management implies managing resources.
+One aspect of computational thinking is deciding how to most effectively and efficiently manage ones resources to solve a particular problem; a computer programmer applies this skill every day to most efficiently ultilise her computer machinery.
+While it might be a rare management skill to know the ability and temperament of the human resources at one's disposal, employing those resources in the most efficient way, too, is a classical computational thinking problem instance.
+Finding a way to quantify abstract resources, such as those related to human resources, is a particularly human skill that must be applied before computational thinking.
+However, measures such as time, money, speed, volume are already in a natural form for computational thinking.
+At its most mathematical, computational thinking would allow a manager to prove that given a particular set of resources, a solution to a particular task is impossible, possible, or optimal.
+
+%\subsection{Route planning}
+
 \end{document}
