Added in about the training session and fixed a few typos

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -12,7 +12,7 @@
 
 \title{PACT: \\ {\large Programming ${\land}$ Algorithms $\Rightarrow$ Computational Thinking}}
 
-\author{Aidan Mooney, Joseph Duffin, Rosemary Monahan, \\ Thomas J. Naughton, and James F. Power}
+\author{Aidan Mooney, Joseph Duffin, Rosemary Monahan, \\ Thomas J. Naughton and James F. Power}
 
 \begin{figure}\centering
 \includegraphics[height=.2\textheight]{nuim_large.jpg}
@@ -231,8 +231,6 @@ Towards the end of the 2013-14 academic year the PACT team organised for surveys
 
 To date there have been $62$ student responses and $7$ teacher responses.  These $7$ teachers represented $5$ schools within these $5$ schools $294$ took the module across $13$ class groups. There was one all-girls school, one all-boys school and three mixed schools. It is clear from the teacher responses that unless there is complete support and buy-in from the management of the school courses like this will not survive.  One teacher commented that ``The pupils were very keen to learn how programming was being used in the working world", something that the PACT team has tried to incorporate in to the module.
 
-\textbf{These figures will need to be updated when all submissions are received.}
-
 No streaming took place in any of the class groups which took this module. However, one teacher noted that there was ``No streaming, but the students choose to take the course. 2/3 of them were ordinary level maths students and they could not get their head around the logical thinking required to program and they ended up moving over to Scratch instead". All of the classes covered Python 1 and Python 2 with most also covering Algorithms with some covering Self-Reference and Graphics.
 
 Initial analysis of the feedback suggests that almost $65\%$ of the students found that ``taking part in this pilot programme has been beneficial to you"? $80\%$ of the students who replied to the survey said that this module was very different compared to other subjects they have taken in school.
@@ -271,7 +269,7 @@ As of the 15th May 2014 we have already received interest from the following sch
 
 The majority of these schools have approached us directly from seeing our webpage or from teachers who are involved in the pilot programme this year. We have also distributed letters to 10 schools based on their proximity to NUIM that are not currently enrolled in PACT. We hope to run this programme again for the academic year 2014-15 with a larger number of schools and take on board the feedback received from the teachers and students in the first year.
 
-During the Summer of 2014 a student intern will be working with the PACT team to develop further resources for teachers, develop a wiki with resources for students and analyse possible future developments for PACT, amongst other things.
+On the 14th June 2014 we ran a training session for a number of the teachers from the schools above. We plan on running a follow up session towards the beginning of the new school year. During the Summer of 2014 a student intern will be working with the PACT team to develop further resources for teachers, develop a wiki with resources for students and analyse possible future developments for PACT, amongst other things.
 
 
 \section{Future funding initiative} \label{Sect:FutFunding}
