Edited the authors

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -12,7 +12,7 @@
 
 \title{PACT: \\ {\large Programming ${\land}$ Algorithms $\Rightarrow$ Computational Thinking}}
 
-\author{Aidan Mooney, Joseph Duffin, Rosemary Monahan, \\ Thomas J. Naughton and James F. Power}
+\author{Aidan Mooney, Joseph Duffin, Rosemary Monahan, \\ Thomas J. Naughton and Susan Bergin}
 
 \begin{figure}\centering
 \includegraphics[height=.2\textheight]{nuim_large.jpg}
