Added the new MU logo and removed reference to NUIM

--- a/manifesto/pact-manifesto.tex
+++ b/manifesto/pact-manifesto.tex
@@ -15,20 +15,20 @@
 \author{Aidan Mooney, Joseph Duffin, Rosemary Monahan, \\ Thomas J. Naughton and Susan Bergin}
 
 \begin{figure}\centering
-\includegraphics[height=.2\textheight]{nuim_large.jpg}
+\includegraphics[height=.15\textheight]{logo2.png}
 \end{figure}
 
 \maketitle
 
 \section{Introduction}
-The PACT programme is a partnership between researchers in the Department of Computer Science at NUI Maynooth and teachers at selected post primary schools around the country.   Starting in September 2013 a number of Irish secondary schools took part in a pilot study, delivering material prepared by the PACT team to transition year students.
+The PACT programme is a partnership between researchers in the Department of Computer Science at Maynooth University and teachers at selected post primary schools around the country.   Starting in September 2013 a number of Irish secondary schools took part in a pilot study, delivering material prepared by the PACT team to transition year students.
 
 Initially the focus of this partnership is on teaching programming to transition year students, but ultimately the goal is to develop a framework for delivering a short course on \textit{computational thinking} as part of the new Junior Certificate cycle.
 
 
 \section{Background and Motivation} \label{Background}
 
-NUI Maynooth has been delivering programmes in Computer Science at undergraduate and postgraduate level for 25 years and, since 2012, has been delivering a unique \textit{BSc in Computational Thinking}.  This degree is a blend of Computer Science, Mathematics and Philosophy, and aims to provide a deeper education in computing than the more traditional degrees, which often have a strong vocational orientation.  The PACT initiative aims to build on the visibility of the \textit{Computational Thinking} brand to bring the ideas at the heart of this degree to second-level students.
+Maynooth University has been delivering programmes in Computer Science at undergraduate and postgraduate level for 25 years and, since 2012, has been delivering a unique \textit{BSc in Computational Thinking}.  This degree is a blend of Computer Science, Mathematics and Philosophy, and aims to provide a deeper education in computing than the more traditional degrees, which often have a strong vocational orientation.  The PACT initiative aims to build on the visibility of the \textit{Computational Thinking} brand to bring the ideas at the heart of this degree to second-level students.
 
 \paragraph{What is Computational Thinking?}
 
@@ -66,7 +66,7 @@ computational terms: what can and cannot be computed, and why?
 
 The goal of the PACT programme is to guide students through the key topics in programming and algorithms towards the ultimate goal of studying the process of computation itself.
 
-The PACT group at NUIM has collaborated with teachers across 9 secondary schools to develop a flexible module which will engage Transition Year students.  The focus of the module is not on learning facts about computers but on developing creative ideas and new ways of thinking.  Continuing feedback will be used to expand the module into a full Junior Cycle short course. 
+The PACT group at Maynooth University has collaborated with teachers across 9 secondary schools to develop a flexible module which will engage Transition Year students.  The focus of the module is not on learning facts about computers but on developing creative ideas and new ways of thinking.  Continuing feedback will be used to expand the module into a full Junior Cycle short course. 
 
 \section{Related work} \label{sect:relWork}
 
@@ -190,7 +190,7 @@ During the Summer of 2013 a number of schools were approached to gauge if there 
 At least one teacher from each of these schools agreed to participate in the pilot programme. 
 
 \paragraph{Teacher training sessions:}
-The PACT team began to structure the content for the pilot programme and on the 25th of May and the 1st June 2013 two training sessions took place in NUIM. These sessions involved introducing the teachers to the content within the programme and also getting to know each other. It was hoped that a community of knowledge and learning would be created between all the teachers as they progressed with the pilot.
+The PACT team began to structure the content for the pilot programme and on the 25th of May and the 1st June 2013 two training sessions took place in Maynooth University. These sessions involved introducing the teachers to the content within the programme and also getting to know each other. It was hoped that a community of knowledge and learning would be created between all the teachers as they progressed with the pilot.
 
 A Moodle system was hosted in the Department of Computer Science to store the content that was delivered in the training sessions. The content was divided in to five components, namely:
 
@@ -267,7 +267,7 @@ As of the 15th May 2014 we have already received interest from the following sch
   \item St. Mel's College, Longford.
 \end{compactitem}  
 
-The majority of these schools have approached us directly from seeing our webpage or from teachers who are involved in the pilot programme this year. We have also distributed letters to 10 schools based on their proximity to NUIM that are not currently enrolled in PACT. We hope to run this programme again for the academic year 2014-15 with a larger number of schools and take on board the feedback received from the teachers and students in the first year.
+The majority of these schools have approached us directly from seeing our webpage or from teachers who are involved in the pilot programme this year. We have also distributed letters to 10 schools based on their proximity to Maynooth University that are not currently enrolled in PACT. We hope to run this programme again for the academic year 2014-15 with a larger number of schools and take on board the feedback received from the teachers and students in the first year.
 
 On the 14th June 2014 we ran a training session for a number of the teachers from the schools above. We plan on running a follow up session towards the beginning of the new school year. During the Summer of 2014 a student intern will be working with the PACT team to develop further resources for teachers, develop a wiki with resources for students and analyse possible future developments for PACT, amongst other things.
 
@@ -275,7 +275,7 @@ On the 14th June 2014 we ran a training session for a number of the teachers fro
 \section{Future funding initiative} \label{Sect:FutFunding}
 The Erasmus+ Programme which commenced on the 1st January 2014 offers the opportunity for Strategic Partnerships for organisations involved in school education. As outlined in Section \ref{par:CTSchools}, other Irish and international initiatives in teaching basic programming skills and multimedia design, aim to develop student teamwork and communication skills. While these initiatives are welcome, they are limited in that they do not address the broader principles of Computer Science. Initiatives to introduce Computer Science to schools in Europe and in the USA have concluded that there is a need to reform Computer Science education at post-primary level to promote  both Computer Science and digital literacy. 
 
-The NUIM PACT programme provides the ground work for such a reform in Computer Science. It places NUIM in the ideal position of leading an Erasmus+ Strategic Partnership (under Key Activity 2) which would be funded for 3 years. These partnerships focus on activities designed to improve education provision across the participating countries, promoting cross-sectoral cooperation and addressing policy objectives, challenges and the needs of a specific field such as post-primary and third-level education.  Through such a strategic partnership with schools, universities and industry, we will be empowered to implement joint initiatives on programme curriculum and teaching training, as well as promoting exchange of experience and know-how. In 2014, the allocation of funding in Ireland for such a partnership was \euro 450,000. It is expected that the funding available in 2015 will be increased and the application deadline will be in April 2015.  
+The Maynooth University PACT programme provides the ground work for such a reform in Computer Science. It places Maynooth University in the ideal position of leading an Erasmus+ Strategic Partnership (under Key Activity 2) which would be funded for 3 years. These partnerships focus on activities designed to improve education provision across the participating countries, promoting cross-sectoral cooperation and addressing policy objectives, challenges and the needs of a specific field such as post-primary and third-level education.  Through such a strategic partnership with schools, universities and industry, we will be empowered to implement joint initiatives on programme curriculum and teaching training, as well as promoting exchange of experience and know-how. In 2014, the allocation of funding in Ireland for such a partnership was \euro 450,000. It is expected that the funding available in 2015 will be increased and the application deadline will be in April 2015.  
 
 
 
